Fix z-index

--- a/app/scss/shared.scss
+++ b/app/scss/shared.scss
@@ -557,7 +557,7 @@ button.cancel-button {
 
 .site-footer-wrap {
     position: sticky;
-    z-index: 101;
+    z-index: 100;
     bottom: 0;
     max-width: var(--content-width);
     margin: 0 auto;
@@ -595,7 +595,7 @@ button.cancel-button {
 
 .snackbar {
     position: fixed;
-    z-index: 101;
+    z-index: 100;
     inset: auto auto 1vw 1.5vw;
     border-radius: 10px;
     max-width: 30rem;
